--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+#app {
+  position : absolute;
+  top      : 8px;
+  left     : 8px;
+  bottom   : 8px;
+  right    : 8px;
+  border-radius    : 8px 8px 0 8px;
+  background-color : #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.spa-slider {
+  position : absolute;
+  bottom   : 0;
+  right    : 2px;
+  width    : 300px;
+  height   : 16px;
+  cursor   : pointer;
+  border-radius    : 8px 0 0 0;
+  background-color : #f00;
+  transition: height 0.3s linear;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spa-slider.isOpen {
+  height: 434px;
 }
